narrow sidebar spacing, fix icons on mobile

--- a/modules/navbar_shiny/css/navbar_shiny.css
+++ b/modules/navbar_shiny/css/navbar_shiny.css
@@ -1,3 +1,16 @@
+@media only screen and (min-width: 16.5em) {
+  #navbar-administration .navbar-bar .navbar-icon:before {
+    text-indent: 16px;
+  }
+}
+
+
+@media only screen and (min-width: 36em) {
+  #navbar-administration .navbar-bar .navbar-icon:before {
+    text-indent: 0px;
+  }
+}
+
 #navbar-administration ul.navbar-menu li a,
 #navbar-administration ul.navbar-menu li span.nolink,
 #navbar-administration .navbar-tab a {
@@ -8,6 +21,19 @@
   padding-top: 1em;
   padding-bottom: 1em;
   border: 0;
+}
+
+#navbar-administration .navbar-tray-vertical .navbar-menu a {
+  padding-left: 2.75em;
+  padding-right: 4em;
+  padding-top: 0.75em;
+  padding-bottom: 0.75em;
+  font-size: 13px;
+}
+
+#navbar-administration .navbar-tray-vertical .navbar-icon::before {
+  font-size: 14px;
+  top: 0.6em; 
 }
 
 #navbar-administration .navbar-tab a:focus {
@@ -36,7 +62,17 @@ body.navbar-fixed #navbar-administration .navbar-tray-vertical {
 #navbar-administration .navbar-tray,
 #navbar-administration .navbar-toggle-orientation,
 #navbar-administration .navbar-menu {
-  background-color: #222;
+  background-color: #292929;
+}
+
+#navbar-administration .navbar-bar {
+  background-color: #292929;
+  color: #dddddd;
+  box-shadow: none;
+}
+#navbar-administration .navbar-tray-vertical,
+#navbar-administration .navbar-tray-horizontal {
+  border: 0;
 }
 
 #navbar-administration .navbar-tray-horizontal .navbar-toggle-orientation {
